log/build_2023-11-18_16-12-46/joystick_sub/stdout_stderr.log
running egg_info
writing manifest file '../../build/joystick_sub/joystick_sub.egg-info/SOURCES.txt'
running build
running build_py
copying joystick_sub/gyrosensor.py -> /home/aiclub/Desktop/TEL_Robot/build/joystick_sub/build/lib/joystick_sub
running install
running install_lib
byte-compiling /home/aiclub/Desktop/TEL_Robot/install/joystick_sub/lib/python3.8/site-packages/joystick_sub/gyrosensor.py to gyrosensor.cpython-38.pyc
  File "/home/aiclub/Desktop/TEL_Robot/install/joystick_sub/lib/python3.8/site-packages/joystick_sub/gyrosensor.py", line 31
    avg += self.imu.get_angular_velocity()[2]/100.0)
                                                   ^
SyntaxError: unmatched ')'

running install_data
running install_egg_info
removing '/home/aiclub/Desktop/TEL_Robot/install/joystick_sub/lib/python3.8/site-packages/joystick_sub-0.0.0-py3.8.egg-info' (and everything under it)
Copying ../../build/joystick_sub/joystick_sub.egg-info to /home/aiclub/Desktop/TEL_Robot/install/joystick_sub/lib/python3.8/site-packages/joystick_sub-0.0.0-py3.8.egg-info
running install_scripts
writing list of installed files to '/home/aiclub/Desktop/TEL_Robot/build/joystick_sub/install.log'
